# anno_agent

./: .env.example  README.md  Test.py  can_log_analyzer.py  can_log_demo.py  can_log_visualizer.py  can_parser.py  can_parser_enhanced (1).py  can_parser_enhanced.py  pyproject.toml  sam_cvat_pipeline_async.py  sam_cvat_pipeline_debug.py  signal_pattern_visualizer.py  simple_signal_visualizer.py  tmp.md
config/: settings.py
examples/: example_1_video_basic.py  example_2_video_keyframes.py  example_3_images_examples.py  example_4_images_basic.py
src/: sam3_qwen_agent (1).py  sam3_qwen_agent (2).py  sam3_qwen_agent (3).py  sam3_qwen_agent (4).py  sam3_qwen_agent.py
src/agents/: base_agent.py  image_annotation_agent.py  video_annotation_agent.py
src/core/: qwen_client.py  video_processor.py
src/prompts/: templates.py
src/tools/: annotation_tools.py  frame_extraction.py  validation_tools.py
src/utils/: batch_proccesor.py  cli.py  file_utils.py  logging_config.py
tests/: test_agents.py
